# ighai

./: Outline.md  README.md  pyproject.toml  scratch.md
.old/: 0.py
.old/book/: main.tex
.old/book/sections/: identity.md  mortality.tex  social life.tex
.old/book/sections/cognition/: architecturalmotifs.tex  motivation.tex
.old/book/sections/intelligence/: principles.tex
.old/book/sections/spirituality/: intro.md  thehumancondition.md
.old/book0/: main.tex
.old/book0/sections/: cognition.tex  introduction.tex  mortality.tex
.old/book0/sections/cognition/: architecturalmotifs.tex
.old/book0/sections/emotions/: intro.md
.old/ifhai/node/: node.py  pooling.py  port.py
.old/llm/: 1.py
.old/notes/: desiratta.md  scratch.md
.old/notes/outlines/: 1.md  2.md  4.md
TransAI/utils/: similarity.py
book/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  preamble.tex  render.sh  styles.sty
book/parts/endmatter/: conclusion.tex  further-reading.tex  glossary.tex  index.tex  references.tex
book/parts/frontmatter/: abstract.tex  index.tex  title.tex
book/parts/part-1-why-transinformalize/: 1-the-problem.tex  index.tex
book/parts/part-2-transinformalizing-humanity/: index.tex
book/parts/part-3-touching-reality/: index.tex
book/sections/: whyinformalize.tex
informally_grounded_humane_ai/: graph.py  graph2.py
notes/: links.md  outline.md  scratch.md  thoughts.md
notes/outlines/: 0.md  3.md  4.md
outlines/: 0.md  2.md
sections/: cognition.tex  introduction.tex
src/memory/: ltm0
src/mind/: thought.py
(+31 files in other folders)
